# news-crawler

./: .env.example  README.md  app.py  conftest.py  pyproject.toml
.streamlit/: config.toml
crawler/: dedup.py  export.py  favorites.py  models.py  sentiment.py
crawler/sources/: __init__.py  base.py  google.py  naver.py  rss.py
docs/: 기획서.md  사용법.md  설치법.md
tests/: test_dedup.py  test_export.py  test_naver.py
