[project]
name = "news-crawler"
version = "0.1.0"
description = "검색어·기간으로 네이버·구글 등에서 뉴스를 수집해 엑셀로 내보내는 도구"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]
